# foss-readme-optimizer

./: .actrc  .env.example  .gitignore  .secrets.example  AGENTS.md  README.md  lock.json  pyproject.toml  requirements-lock.txt  state.json
.github/: actionlint.yaml
.github/workflows/: ci.yml  dependency-check.yml  detect-template-clones.yml  golden-set-run.yml  measure-clone-latency.yml  readme-agent-portfolio.yml  readme-agent-production.yml  readme-agent-run.yml  readme-agent-supervise.yml  update-products-registry.yml
config/policies/: aspose-3d-foss-net.yml  aspose-3d-foss-python.yml  aspose-3d-foss-typescript.yml  aspose-3d-foss.yml  aspose-barcode-foss-python.yml  aspose-cells-foss-cpp.yml  aspose-cells-foss-net.yml  aspose-cells-foss-python.yml  aspose-cells-foss-typescript.yml  aspose-cells-foss.yml  aspose-email-foss-cpp.yml  aspose-email-foss-net.yml  aspose-email-foss-python.yml  aspose-font-foss-python.yml  aspose-note-foss-python.yml  aspose-page-foss-python.yml  aspose-pdf-foss-go.yml  aspose-pdf-foss-net.yml  aspose-pdf-foss.yml  aspose-slides-foss-cpp.yml  aspose-slides-foss-java.yml  aspose-slides-foss-net.yml  aspose-slides-foss-python.yml  aspose-tex-foss-python.yml  aspose-words-foss-net.yml  aspose-words-foss-python.yml
data/: README.md  aspose_com_links.json  families.json  products.json
docs/: architecture.md  github-surface-control.md  policy-authoring.md  presentation-standard.md  repository-presentation-surface-model.md  safety-model.md
logs/: 2026-07-17.md  2026-07-18.md  2026-07-19.md  2026-07-20.md  2026-07-21.md  2026-07-22.md  2026-07-23.md  2026-07-24.md  README.md
plans/: GOVERNANCE.md  idea.md  master.md  requirements.md
plans/investigations/: agentic-loop-proof.md  capability-dispatch-production-readiness.md  capability-dispatch-robustness.md  control-class-proof-report.md  full-project-truth-audit-2026-07-22.md  full-project-truth-audit-2026-07-23.md  full-registry-ecosystem-detection-survey.md  full-registry-portfolio-survey.md  full-registry-wave6-survey.md  full-surface-current-state.md  level8-autonomous-mission-control-sprint-audit.md  level8-requirement-taskcard-coverage-sprint-audit.md  level8-wave0-authority-reroute-sprint-audit.md  level8-wave0-candidate-artifact-disposition-sprint-audit.md  level8-wave0-semantic-closure-sprint-audit.md  level8-wave2-restartable-actions-runtime.md  llm-gateway-characterization.md  llm-gateway-context-ceiling-corrected.md  reference-repository-benchmark.md  repository-presentation-requirements-coverage.md  runtime-framework-evaluation.md  specialist-domain-isolation-production-readiness.md
prompts/: README.md
prompts/analysis/: presentation_standard_compliance.yaml
prompts/generation/: relationship_explained.yaml
prompts/planning/: repair_capability_selection.yaml  specialist_selection_turn.yaml  (+1 more)
scripts/: fetch_aspose_com_links.py  update_products_registry.py
templates/: README.md
tests/: conftest.py
(+593 files in other folders)
