[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "readme-agent"
version = "0.1.0"
description = "Capability-driven repository-presentation agent; ships today as a README audit/remediation engine for the Aspose FOSS portfolio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28",
    "PyYAML>=6.0",
    "pydantic>=2.0",
    "langgraph>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
readme-agent = "readme_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/readme_agent"]

[tool.pytest.ini_options]
pythonpath = ["src", "scripts"]
testpaths = ["tests"]
markers = [
    "live: requires real network access / live secrets, excluded from default CI run",
]
addopts = "-m 'not live'"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true
