[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "readme-agent"
version = "0.1.0"
description = "Capability-driven repository-presentation agent; ships today as a README audit/remediation engine for the Aspose FOSS portfolio"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.28",
    "PyYAML>=6.0",
    "pydantic>=2.0",
    "langgraph>=1.0",
    # Wave 13.6 (`DEP-002`): imported directly (`from langchain_core.runnables
    # import RunnableConfig`, every specialist module) -- previously relied on
    # langgraph's own transitive pin rather than declaring it, a real gap this
    # session's own direct-import audit found (grep across src/ against
    # pyproject.toml's own dependency list).
    "langchain-core>=1.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.10",
    # Wave 13.6 (`DEP-001`): SBOM generation (`pip-audit --format=cyclonedx-
    # json`) plus vulnerability scanning for the locked dependency set --
    # already found and fixed one real issue (6 known CVEs in the venv's
    # own bootstrap `pip`) the first time it ran.
    "pip-audit>=2.7",
]

[project.scripts]
readme-agent = "readme_agent.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/readme_agent"]

[tool.pytest.ini_options]
pythonpath = ["src", "scripts"]
testpaths = ["tests"]
markers = [
    "live: requires real network access / live secrets, excluded from default CI run",
]
addopts = "-m 'not live'"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
files = ["src"]
ignore_missing_imports = true
